# yiu_comfy_nodes

./: .comfyignore  .gitattributes  .gitignore  README.md  README_en.md  __init__.py  comfyui_custom_node_register.yaml  pyproject.toml  yiu_fit_itm_2_msk.py  yiu_img_cnv_placer.py  yiu_nodes_example_workflow.json
.github/scripts/: translate_readme.py
.github/workflows/: publish_action.yml  update_readme_en.yml
js/: yiu_hide_internal_nodes.js  yiu_upscale_loop_warning.js
yiu_comfy_nodes/: __init__.py  main.py  utils.py  yiu_base_node.py  yiu_fit_itm_2_msk.py  yiu_img_cnv_placer.py  yiu_itm_cropper.py
yiu_comfy_nodes_impl/: .yiu_upscale_loop.md  __init__.py  internal.py  utils.py  yiu_base_node.py  yiu_fit_itm_2_msk.py  yiu_img_cnv_placer.py  yiu_img_to_zone_mask.py  yiu_itm_cropper.py  yiu_upscale_loop.py
yiu_comfy_nodes_impl/_utils/: syncA2B.py
