# pyproject.toml
[project]
name = "yiu_comfy_nodes"
description = "Useful to me. Might be to you."
version = "0.0.1+20250705"
license = "AGPL"
dependencies  = [
    "torch",
    "numpy",
    "Pillow"
]

[project.urls]
Repository = "https://github.com/leizingyiu/yiu_comfy_nodes"

[tool.comfy]
PublisherId = "leizingyiu" 
DisplayName = "yiu_comfy_nodes"
Icon = "https://leizingyiu.github.io/apps/animated_favicon.gif"
supported_comfyui_version = ">=1.0.0" 